# Starter-Minecraft-Servers

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: main.py
app/bot/: bot.py  keyboards.py
app/bot/handlers/: commands.py  server.py
app/config/: servers.py  settings.py
app/servers/: manager.py  models.py  rcon.py
